Examples can now be run at command line by Gradle
* Update README to reflect use of Gradle for build.
* Add gradle tasks to run the NIO and Netty examples.
* Ensure both examples exit quickly.